src/test/ui/traits/inductive-overflow/supertrait.stderr
error[E0277]: the trait bound `NoClone: Magic` is not satisfied
  --> $DIR/supertrait.rs:13:23
   |
LL |     let (a, b) = copy(NoClone);
   |                  ---- ^^^^^^^ the trait `Magic` is not implemented for `NoClone`
   |                  |
   |                  required by a bound introduced by this call
   |
note: required by a bound in `copy`
  --> $DIR/supertrait.rs:7:12
   |
LL | fn copy<T: Magic>(x: T) -> (T, T) { (x, x) }
   |            ^^^^^ required by this bound in `copy`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
